api/rutas-api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes-api
  labels:
    app: routes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routes-api
  template:
    metadata:
      labels:
        app: routes-api
    spec:
      containers:
      - name: routes-api
        image: routes-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
