api/rutas-api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: routes-api-service
spec:
  selector:
    app: routes-api
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
