api/rutas-api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routes-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: routes-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: routes-api-service
            port:
              number: 80
